--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "antd": "^5.5.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.9.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2"
   },
