--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
     "react-icons": "^4.9.0",
-    "react-router-dom": "^6.11.2"
+    "react-modal": "^3.16.1",
+    "react-router-dom": "^6.11.2",
+    "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
