--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
     "react-icons": "^4.9.0",
+    "react-intersection-observer": "^9.4.4",
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.11.2",
+    "react-spring": "^9.7.1",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
