--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-modal": "^3.16.1",
     "react-router-dom": "^6.12.1",
     "react-spring": "^9.7.1",
+    "react-toastify": "^9.1.3",
     "react-transition-group": "^4.4.5"
   },
   "devDependencies": {
