--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@ant-design/icons": "^5.1.4",
+    "@mui/material": "^5.13.4",
     "antd": "^5.5.2",
     "aos": "^2.3.4",
     "prop-types": "^15.8.1",
