--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropdown-select": "^4.9.3",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.9.0",
     "react-intersection-observer": "^9.4.4",
     "react-modal": "^3.16.1",
